objects/Territory_State__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <inlineHelpText>Western is West-7, SW - 6, Midwest; Eastern is NE, MidStates, Great Lakes</inlineHelpText>
        <label>Super Region</label>
        <picklist>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Description__c</fullName>
        <label>Territory Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VinPro_Manager__c</fullName>
        <formula>Account_Manager__r.Reports_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that looks up the Manager for the VinPro for use in POA&apos;s</inlineHelpText>
        <label>Manager of Performance Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Website Account Manager - assigned in the Territory tab</inlineHelpText>
        <label>Website AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Website Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_States9</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Super_Region__c</columns>
        <columns>Website_AM__c</columns>
        <columns>Website_Manager__c</columns>
        <columns>Implementation_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>VinPro_Manager__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Regional__c</columns>
        <columns>Regional_Assistant__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>DDM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Donna_s_States</fullName>
        <columns>Region_Name__c</columns>
        <columns>NAME</columns>
        <columns>Regional__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Implementation_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Manager__c</field>
            <operation>equals</operation>
            <value>donna stearns</value>
        </filters>
        <label>Donna&apos;s States</label>
    </listViews>
    <listViews>
        <fullName>Great_Lakes_4</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>Super_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>4</value>
        </filters>
        <label>Great Lakes - 4</label>
    </listViews>
    <listViews>
        <fullName>Mid_States_2</fullName>
        <columns>Region_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>Regional_Assistant__c</columns>
        <columns>Regional_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>2</value>
        </filters>
        <label>Mid States - 2</label>
    </listViews>
    <listViews>
        <fullName>Midwest_5</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>Super_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>5</value>
        </filters>
        <label>Midwest - 5</label>
    </listViews>
    <listViews>
        <fullName>Mountain_8</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>Website_AM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>mountain</value>
        </filters>
        <label>Mountain - 8</label>
    </listViews>
    <listViews>
        <fullName>New_England_9</fullName>
        <columns>Region_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>Regional_Assistant__c</columns>
        <columns>Regional_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>9</value>
        </filters>
        <label>New England - 9</label>
    </listViews>
    <listViews>
        <fullName>Non_Con_US</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Implementation_Manager__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>notContain</operation>
            <value>1,2,3,4,5,6,7,8</value>
        </filters>
        <label>Non Con US</label>
    </listViews>
    <listViews>
        <fullName>Northeast_3</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>3</value>
        </filters>
        <label>Northeast - 3</label>
    </listViews>
    <listViews>
        <fullName>SE_1</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>DDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filters>
        <label>Southeast - 1</label>
    </listViews>
    <listViews>
        <fullName>Southwest_6</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <columns>Regional_Assistant__c</columns>
        <columns>Regional_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>6</value>
        </filters>
        <label>Southwest - 6</label>
    </listViews>
    <listViews>
        <fullName>West_7</fullName>
        <columns>NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Website_AM__c</columns>
        <columns>DDM__c</columns>
        <columns>Territory_Manager__c</columns>
        <columns>Regional__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Name__c</field>
            <operation>contains</operation>
            <value>7</value>
        </filters>
        <label>West - 7</label>
    </listViews>
    <nameField>
        <label>State</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>